[tool.poetry]
name = "poetry add install requests"
version = "0.1.0"
description = ""
authors = ["Sophia Ho <Sophia.HoMeiYin@softwire.com>"]

[tool.poetry.dependencies]
python = "^3.10"
install = "^1.3.5"
Flask = "^2.1.2"
requests = "^2.28.1"
bootstrap-py = "^1.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
